# CppWebServer

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: Config.hpp  ConnectionManager.hpp  ContentNegotiation.hpp  Exception.hpp  FileServer.hpp  HttpParser.hpp  HttpResponse.hpp  Logger.hpp  SSLManager.hpp  SocketManager.hpp  server.hpp
public/: index.html  style.css
src/: CMakeLists.txt  Config.cpp  ConnectionManager.cpp  ContentNegotiation.cpp  FileServer.cpp  HttpParser.cpp  HttpResponse.cpp  Logger.cpp  SSLManager.cpp  SocketManager.cpp  main.cpp  server.cpp
